  for the invisible substitutions PDF problem.  (Steve Rowe)

* SOLR-10503,SOLR-10502: Deprecate CurrencyField in favor of new CurrencyFieldType, which works
  with point fields and provides control over dynamic fields used for the raw amount and currency
  code sub-fields.  (hossman, Steve Rowe)

* SOLR-10966: Add workaround for Hadoop-Common 2.7.2 incompatibility with Java 9.
  (Uwe Schindler)

==================  6.6.1 ==================

Bug Fixes
----------------------

* SOLR-10857: standalone Solr loads UNLOADed core on request (Erick Erickson, Mikhail Khludnev)

==================  6.6.0 ==================

Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release.

Versions of Major Components
---------------------
Apache Tika 1.13
Carrot2 3.15.0
Velocity 1.7 and Velocity Tools 2.0
Apache UIMA 2.3.1
Apache ZooKeeper 3.4.10
Jetty 9.3.14.v20161028

Upgrade Notes
----------------------

* Solr contribs map-reduce, morphlines-core and morphlines-cell have been removed.

* JSON Facet API now uses hyper-log-log for numBuckets cardinality calculation and
  calculates cardinality before filtering buckets by any mincount greater than 1.

* ZooKeeper dependency has been upgraded from 3.4.6 to 3.4.10.

* Setting <solrQueryParser defaultOperator="..."/> in schema is no longer allowed and will cause an exception,
  but older configs with luceneMatchVersion < 6.6 will still work as before.
  Please use "q.op" parameter on the request instead. For more details, see SOLR-10586.

* Setting <defaultSearchField> in schema is no longer allowed and will cause an exception,
  but older configs with luceneMatchVersion < 6.6 will still work as before.
  Please use "df" parameter on the request instead. For more details, see SOLR-10587.

Detailed Change List
----------------------
New Features
----------------------

* SOLR-9992: Add support for grouping with PointFields. (Cao Manh Dat)
