@@ -213,6 +213,9 @@ Other Changes
 
 * SOLR-10966: Add workaround for Hadoop-Common 2.7.2 incompatibility with Java 9.
   (Uwe Schindler)
+  
+ * SOLR-11122: Creating a core should write a core.properties file first and clean up on failure
+   (Erick Erickson)
 
 ==================  6.6.1 ==================
 
